build_log.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:kaptGenerateStubsDebugKotlin UP-TO-DATE
> Task :app:kaptDebugKotlin UP-TO-DATE
> Task :app:compileDebugKotlin UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\Pranav Bairollu\Documents\Demo\ForeverUs (3)\ForeverUs\ForeverUs\app\src\main\java\com\example\foreverus\MusicPlayerActivity.java:40: error: cannot find symbol
                            @Nullable com.bumptech.glide.request.transition.Transition<? super android.graphics.Bitmap> transition) {
                             ^
  symbol: class Nullable
C:\Users\Pranav Bairollu\Documents\Demo\ForeverUs (3)\ForeverUs\ForeverUs\app\src\main\java\com\example\foreverus\MusicPlayerActivity.java:59: error: cannot find symbol
                    public void onLoadCleared(@Nullable android.graphics.drawable.Drawable placeholder) {
                                               ^
  symbol: class Nullable
C:\Users\Pranav Bairollu\Documents\Demo\ForeverUs (3)\ForeverUs\ForeverUs\app\src\main\java\com\example\foreverus\SongAdapter.java:47: error: cannot find symbol
        Matcher matcher = YOUTUBE_VIDEO_ID_PATTERN.matcher(youtubeUrl);
                          ^
  symbol:   variable YOUTUBE_VIDEO_ID_PATTERN
  location: class SongAdapter
C:\Users\Pranav Bairollu\Documents\Demo\ForeverUs (3)\ForeverUs\ForeverUs\app\src\main\java\com\example\foreverus\SongsFragment.java:158: error: cannot find symbol
                                .setAction(R.string.undo, v -> {
                                                   ^
  symbol:   variable undo
  location: class string
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
4 errors

[Incubating] Problems report is available at: file:///C:/Users/Pranav%20Bairollu/Documents/Demo/ForeverUs%20(3)/ForeverUs/ForeverUs/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\Pranav Bairollu\Documents\Demo\ForeverUs (3)\ForeverUs\ForeverUs\app\src\main\java\com\example\foreverus\MusicPlayerActivity.java:40: error: cannot find symbol
                              @Nullable com.bumptech.glide.request.transition.Transition<? super android.graphics.Bitmap> transition) {
                               ^
    symbol: class Nullable
  C:\Users\Pranav Bairollu\Documents\Demo\ForeverUs (3)\ForeverUs\ForeverUs\app\src\main\java\com\example\foreverus\MusicPlayerActivity.java:59: error: cannot find symbol
                      public void onLoadCleared(@Nullable android.graphics.drawable.Drawable placeholder) {
                                                 ^
    symbol: class Nullable
  C:\Users\Pranav Bairollu\Documents\Demo\ForeverUs (3)\ForeverUs\ForeverUs\app\src\main\java\com\example\foreverus\SongAdapter.java:47: error: cannot find symbol
          Matcher matcher = YOUTUBE_VIDEO_ID_PATTERN.matcher(youtubeUrl);
                            ^
    symbol:   variable YOUTUBE_VIDEO_ID_PATTERN
    location: class SongAdapter
  C:\Users\Pranav Bairollu\Documents\Demo\ForeverUs (3)\ForeverUs\ForeverUs\app\src\main\java\com\example\foreverus\SongsFragment.java:158: error: cannot find symbol
                                  .setAction(R.string.undo, v -> {
                                                     ^
    symbol:   variable undo
    location: class string
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.13/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
22 actionable tasks: 1 executed, 21 up-to-date
